argocd/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: argocd
  name: argocd-server
  labels:
    app.kubernetes.io/name: argocd-server
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
  selector:
    app.kubernetes.io/name: argocd-server
