argocd/devops-server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-server-service
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000  # Porta interna do serviço
      targetPort: 5000 # Porta em que sua aplicação Python escuta
      nodePort: 30000 # Escolha uma NodePort disponível (entre 30000-32767)
  selector:
    app: devops-server # Certifique-se de que este seletor corresponda aos labels da sua aplicação
