argocd/argocd-ingress.yaml
# argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx" # Certifique-se de que o nome da classe corresponde ao seu Ingress Controller
spec:
  rules:
    - host: argocd.desafio # Substitua pelo host desejado
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80 # Porta HTTP do serviço ArgoCD
