argocd/devops-server_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: 192.168.1.4 # Use o IP da sua VM como host
    http:
      paths:
      - path: /desafio-devops
        pathType: Prefix
        backend:
          service:
            name: devops-server-service
            port:
              number: 8000
